samples/_failures_safe/1761330098_39ca83_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0d3b96b2.c: In function ‘main’:
./samples/SAFE/__tmp_0d3b96b2.c:161:17: error: expected expression at end of input
  161 |                 int status = add_matrices(&a, &
      |                 ^~~
./samples/SAFE/__tmp_0d3b96b2.c:161:30: error: too few arguments to function ‘add_matrices’
  161 |                 int status = add_matrices(&a, &
      |                              ^~~~~~~~~~~~
./samples/SAFE/__tmp_0d3b96b2.c:98:5: note: declared here
   98 | int add_matrices(const Matrix* a, const Matrix* b, Matrix* result) {
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_0d3b96b2.c:161:17: error: expected declaration or statement at end of input
  161 |                 int status = add_matrices(&a, &
      |                 ^~~
./samples/SAFE/__tmp_0d3b96b2.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0d3b96b2.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0d3b96b2.c:161:17: error: expected declaration or statement at end of input
